# BidAgent

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 417ae449b0da_init.py  cde811ca4f80_add_missing_infos_table.py
backend/app/: main.py
backend/app/agent/: tool_registry.py
backend/app/agent/graph/: agent_factory.py  graph.py  nodes.py  prompts.py  router.py  state.py
backend/app/agent/tools/: docx_output.py  file_loader.py  file_search.py  image_extractor.py  missing_info.py
backend/app/api/v1/: __init__.py  files.py  projects.py
backend/app/core/: config.py
backend/app/models/: __init__.py  file.py  missing_info.py  project.py
backend/app/schemas/: file.py  project.py
backend/app/services/: file_service.py  project_service.py
backend/tests/: test_graph_state.py  test_tools.py
docs/superpowers/specs/: 2026-06-14-agent-graph-design.md  2026-06-14-agent-tools-design.md  2026-06-14-bidagent-design.md  2026-06-14-file-upload-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/layout/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: file.js  project.js
frontend/src/style/: tokens.css
frontend/src/views/file/: index.vue
frontend/src/views/home/: index.vue
frontend/src/views/project/: detail.vue  index.vue
