[project]
name = "bidagent-backend"
version = "0.1.0"
description = "BidAgent Backend - FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=44.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
    "markitdown[docx,pdf]>=0.1.0",
]
