[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bidagent-backend"
version = "0.1.0"
description = "BidAgent Backend - FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=44.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
    "markitdown[docx,pdf]>=0.1.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
